--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+#for email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tpvinh292931@gmail.com
+spring.mail.password=qjasjjlhjfilslwv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
